# AI_trading

./: .dockerignore  .env  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  debug_pydantic.py  deploy.ps1  docker-compose.yml  erseddyiAI_Trading.venvScriptsActivate.ps1  krakenfutures_demo_test.py  momentum_worker.unused.py  mypy.ini  package.json  prometheus.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  start.sh  streamlit_app.py  test_integration.py  test_type_checking.py
.github/workflows/: ci-cd.yml
.streamlit/: config.toml  secrets.toml.example
ai_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 001_create_backtest_tables.sql  20260218_000001_add_backtest_ml_grid_kraken_tables.py
app/: main.py  models.py  strategy_manager.py
app/api/: # Code Citations.md  __init__.py  routes_auth.py  routes_backtest.py  (+10 more)
cloud_streamlit/: requirements.txt  streamlit_app.py
configs/: __init__.py  settings.py
dashboard/: streamlit_app.py  ui_components.py
docs/: architecture.md
engine/: __init__.py  backtest_engine.py  execution.py  execution_manager.py  futures_adapter.py  positions.py  risk.py  validation.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
prisma/: README.md  schema.prisma
scripts/: kraken_futures_demo_smoke.py  run_app.ps1  run_backend.ps1  run_kraken_demo_smoke.ps1  run_streamlit.ps1  smoke_local.ps1  smoke_local_all.ps1  stop_app.ps1
tests/: conftest.py  test_api.py  test_backtest.py  test_paper_trading_broker.py
(+144 files in other folders)
